kailab-control/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kailab-ci
  labels:
    app.kubernetes.io/name: kailab-ci
    app.kubernetes.io/part-of: kailab
